tests/parser/parse-while-let.1.bad.error
error: Malformed while-let expression
  --> test:4:21
   |
 4 |  (define f (while-let))
   |                      ^ expected pattern
